[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using several rust drivers using various boards."
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "driver-examples-generic-bare-metal"
version = "0.1.0"
edition = "2018"

[dependencies]
ad983x          = { git = "https://github.com/eldruin/ad983x-rs" }
ads1x1x         = { git = "https://github.com/eldruin/ads1x1x-rs" }
bmi160          = { git = "https://github.com/eldruin/bmi160-rs" }
ds1307          = { git = "https://github.com/eldruin/ds1307-rs" }
eeprom24x       = { git = "https://github.com/eldruin/eeprom24x-rs" }
embedded-ccs811 = { git = "https://github.com/eldruin/embedded-ccs811-rs" }
hdc20xx         = { git = "https://github.com/eldruin/hdc20xx-rs" }
iaq-core        = { git = "https://github.com/eldruin/iaq-core-rs" }
isl29125        = { git = "https://github.com/eldruin/isl29125-rs" }
max170xx        = { git = "https://github.com/eldruin/max170xx-rs" }
max3010x        = { git = "https://github.com/eldruin/max3010x-rs" }
mcp794xx        = { git = "https://github.com/eldruin/mcp794xx-rs" }
mlx9061x        = { git = "https://github.com/eldruin/mlx9061x-rs" }
mma8x5x         = { git = "https://github.com/eldruin/mma8x5x-rs" }
opt300x         = { git = "https://github.com/eldruin/opt300x-rs" }
pwm-pca9685     = { git = "https://github.com/eldruin/pwm-pca9685-rs" }
si4703          = { git = "https://github.com/eldruin/si4703-rs" }
tcs3472         = { git = "https://github.com/eldruin/tcs3472-rs" }
tmp006          = { git = "https://github.com/eldruin/tmp006-rs" }
tmp1x2          = { git = "https://github.com/eldruin/tmp1x2-rs" }
veml6030        = { git = "https://github.com/eldruin/veml6030-rs" }
veml6070        = { git = "https://github.com/eldruin/veml6070-rs" }
veml6075        = { git = "https://github.com/eldruin/veml6075-rs" }

#ad983x = "0.2"
#ads1x1x = "0.2"
#bmi160 = "0.1"
#ds1307 = "0.3"
#eeprom24x = "0.3"
#embedded-ccs811 = "0.2"
#hdc20xx = "0.1"
#iaq-core = "0.1"
#isl29125 = "0.1"
#max170xx = "0.1"
#max3010x = "0.1"
#mcp794xx = "0.2"
#mlx9061x = "0.1"
#mma8x5x = "0.1"
#opt300x = "0.1"
#pwm-pca9685 = "0.3"
#si4703 = "0.1"
#tcs3472 = "0.2"
#tmp006 = "0.1"
#tmp1x2 = "0.2"
#veml6030 = "0.1"
#veml6070 = "0.1"
#veml6075 = "0.2"

ssd1306 = "0.4"
embedded-graphics = "0.6"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.7"
nb = "1"
embedded-hal = "0.2.4"
libm = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6.5"
cortex-m-rtic = "0.5.3"
shared-bus-rtic = "0.2.2"

panic-rtt-target = { version =  "0.1.1", features = ["cortex-m"] }
rtt-target = { version =  "0.2.2", features = ["cortex-m"] }

#stm32f0xx-hal = { version = "0.17", optional = true }
#stm32f1xx-hal = { version = "0.7",  optional = true } #0.6
#stm32f3xx-hal = { version = "0.6",  optional = true }
#stm32f4xx-hal = { version = "0.9",  optional = true }
#stm32f7xx-hal = { version = "0.3",  optional = true }
#stm32h7xx-hal = { version = "0.9",  optional = true }
#stm32l0xx-hal = { version = "0.7",  optional = true }
#stm32l1xx-hal = { version = "0.1",  optional = true, default-features = false}
#stm32l4xx-hal = { version = "0.6",  optional = true }

stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true }
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true }
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal", optional = true }
stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", optional = true, default-features = false}
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = true }

[features]
stm32f0xx = []
stm32f1xx = []
stm32f3xx = []
stm32f4xx = []
stm32f7xx = []
stm32h7xx = []
stm32l0xx = []
stm32l1xx = []
stm32l4xx = []

stm32f030xc = ["stm32f0xx-hal/stm32f030xc", "stm32f0xx-hal/rt"]
stm32f042   = ["stm32f0xx-hal/stm32f042",   "stm32f0xx-hal/rt"]
stm32f100 = ["stm32f1xx-hal/stm32f100", "stm32f1xx-hal/rt"]
stm32f101 = ["stm32f1xx-hal/stm32f101", "stm32f1xx-hal/rt"]
stm32f103 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/rt", "stm32f1xx-hal/medium"]
stm32f303xc = ["stm32f3xx-hal/stm32f303xc", "stm32f3xx-hal/rt"] 
stm32f401 = ["stm32f4xx-hal/stm32f401", "stm32f4xx-hal/rt"] 
stm32f405 = ["stm32f4xx-hal/stm32f405", "stm32f4xx-hal/rt"] 
stm32f411 = ["stm32f4xx-hal/stm32f411", "stm32f4xx-hal/rt"] 
stm32f722 = ["stm32f7xx-hal/stm32f722", "stm32f7xx-hal/rt"] 
stm32h742 = ["stm32h7xx-hal/stm32h742", "stm32h7xx-hal/rt"]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
stm32l0x2 =    ["stm32l0xx-hal/stm32l0x2", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l072kztx = ["stm32l0xx-hal/stm32l0x2", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l0x1 = ["stm32l0xx-hal/stm32l0x1", "stm32l0xx-hal/rt", "stm32l0xx-hal/mcu-STM32L071KBTx"]
stm32l100 = ["stm32l1xx-hal/stm32l100", "stm32l1xx-hal/rt"]
stm32l151 = ["stm32l1xx-hal/stm32l151", "stm32l1xx-hal/rt"]
stm32l4x1 = ["stm32l4xx-hal/stm32l4x1", "stm32l4xx-hal/rt"]
stm32l4x2 = ["stm32l4xx-hal/stm32l4x2", "stm32l4xx-hal/rt"]
stm32l4x6 = ["stm32l4xx-hal/stm32l4x6", "stm32l4xx-hal/rt"]

[[example]]
name = "ad9833-midi-player-bp"
path = "examples/ad9833-midi-player-bp.rs"

[[example]]
name = "ads1015-adc-display"
path = "examples/ads1015-adc-display.rs"

[[example]]
name = "at24c256-eeprom"
path = "examples/at24c256-eeprom.rs"

[[example]]
name = "bmi160-imu-display"
path = "examples/bmi160-imu-display.rs"

[[example]]
name = "ccs811-gas-voc-display"
path = "examples/ccs811-gas-voc-display.rs"

[[example]]
name = "ccs811-gas-voc-hdc2080-display"
path = "examples/ccs811-gas-voc-hdc2080-display.rs"

[[example]]
name = "ds1307-rtc"
path = "examples/ds1307-rtc.rs"

[[example]]
name = "hdc2080-temp-humidity-display"
path = "examples/hdc2080-temp-humidity-display.rs"

[[example]]
name = "iaq-core-c-gas-voc-display"
path = "examples/iaq-core-c-gas-voc-display.rs"

[[example]]
name = "isl29125-color-display"
path = "examples/isl29125-color-display.rs"

[[example]]
name = "max17043-battery-monitor-display"
path = "examples/max17043-battery-monitor-display.rs"

[[example]]
name = "max30102-heart-usart"
path = "examples/max30102-heart-usart.rs"

[[example]]
name = "mcp7940n-rtc-display"
path = "examples/mcp7940n-rtc-display.rs"

[[example]]
name = "mlx90614-temperature-display"
path = "examples/mlx90614-temperature-display.rs"

[[example]]
name = "mlx90615-temperature-display"
path = "examples/mlx90615-temperature-display.rs"

[[example]]
name = "mma8452-accel-display"
path = "examples/mma8452-accel-display.rs"

[[example]]
name = "opt3001-als-display"
path = "examples/opt3001-als-display.rs"

[[example]]
name = "pca9685-pwm-rgb-led-servos"
path = "examples/pca9685-pwm-rgb-led-servos.rs"

[[example]]
name = "si4703-fm-radio-display"
path = "examples/si4703-fm-radio-display.rs"

[[example]]
name = "si4703-fm-radio"
path = "examples/si4703-fm-radio.rs"

[[example]]
name = "tcs34725-color-display"
path = "examples/tcs34725-color-display.rs"

[[example]]
name = "tmp006-ir-temp-display"
path = "examples/tmp006-ir-temp-display.rs"

[[example]]
name = "tmp102-temp-display"
path = "examples/tmp102-temp-display.rs"

[[example]]
name = "veml6030-als-display"
path = "examples/veml6030-als-display.rs"

[[example]]
name = "veml6070-uv-display"
path = "examples/veml6070-uv-display.rs"

[[example]]
name = "veml6075-uv-display"
path = "examples/veml6075-uv-display.rs"

#[[example]]
#name = "ccs811-gas-voc-usart-logger"
#path = "examples/ccs811-gas-voc-usart-logger-bp.rs"
#
#[[example]]
#name = "iaq-core-c-gas-voc-usart-logger"
#path = "examples/iaq-core-c-gas-voc-usart-logger.rs"
